--- a/.github/workflows/main_evcomparisons.yml
+++ b/.github/workflows/main_evcomparisons.yml
@@ -52,6 +52,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'EVComparisons'
-          slot-name: 'Development'
+          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_37BE6B3D8BB94EF2B9601A983D494F6A }}
           package: .
